name: zm-language
version: 0.1
synopsis: Parser, pretty printer and code generators for the ZM data modelling language
description:
    See the <http://github.com/Quid2/zm-language online tutorial>.
homepage: http://github.com/Quid2/zm-language
category: Data
license:             BSD3
license-file:        LICENSE
author:              Pasqualino `Titto` Assini
maintainer:          tittoassini@gmail.com
copyright:           Copyright: (c) 2019 Pasqualino `Titto` Assini
cabal-version: >=1.10
build-type: Simple
Tested-With: GHC == 7.10.3 GHC == 8.0.2 GHC == 8.2.2 GHC == 8.4.4 GHC == 8.6.5
extra-source-files:
    stack.yaml
    -- stack710.yaml
    --stack802.yaml
    --stack822.yaml
    README.md

source-repository head
    type: git
    location: https://github.com/Quid2/zm-language
    
library 
    exposed-modules:
        Data.These,ZM.Parser,ZM.Parser.Value,ZM.Parser.Lexer,ZM.Parser.ADT,ZM.Parser.Types,ZM.Parser.Util,ZM.To.Encoder,ZM.To.Haskell,ZM.To.TypeScript,ZM.To.ZMT,ZM.To.Util
    other-modules: FileEmbed
    build-depends:
                  base >=4.8.2.0 && <5
                , array >=0.5.1.0 && <0.6
                , bytestring
                , containers
                , either
                , model
                , flat 
                , zm >= 0.3
                , megaparsec == 6.5.0
                , parser-combinators
                , scientific,text,filepath,directory,data-default,Unique,file-embed,template-haskell,regex-compat,pretty,extra

    default-language: Haskell2010
    hs-source-dirs: src
    -- ghc-options: -O2 -funbox-strict-fields -Wall -fno-warn-orphans -fno-warn-name-shadowing
    ghc-options: -funbox-strict-fields -Wall -fno-warn-orphans -fno-warn-name-shadowing -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints 
    -- -Werror

test-suite lib
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
                  base,
                  containers,
                  bytestring,
                  text,
                  pretty,
                  tasty >= 0.11,
                  tasty-hunit >= 0.8,
                  tasty-quickcheck,
                  timeit >=1,
                  file-embed,filepath,
                  flat,
                  model,
                  zm,
                  zm-language
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules:
        ParserTest
        Info
        Test.Data
        -- Test.Data.Flat
        Test.Data.Model
        Test.Data2
        -- Test.Data2.Flat
        Test.Data3
        -- Test.Data3.Flat
        ToZMTTest
        ToHaskellTest
        ToTypeScriptTest

test-suite doc
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  ghc-options:        -threaded -O0
  main-is:            DocSpec.hs
  build-depends:      base, doctest>=0.11.4,filemanip>=0.3.6.3
  HS-Source-Dirs:     test
